# libCacheSim-python

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: build.yml  docs.yml  pypi-release.yml
benchmark/: simulation.py
docs/: mkdocs.yml  profiling.md  requirements.txt
docs/src/en/: faq.md  index.md  plugin.md
docs/src/en/examples/: plugins.md  simulation.md
docs/src/en/getting_started/: quickstart.md
docs/src/zh/: index.md
examples/: README.md  basic_usage.py  demo_unified_interface.py  plugin_cache.py  profiling_analysis.py  python_hook_cache_example.py  real_world_profiling.py  trace_analysis.py
examples/admission/: bloomfilter.py  plugin_admissioner.py
examples/plugin_cache/: s3fifo.py
libcachesim/: __init__.py  __init__.pyi  _s3_cache.py  admissioner.py  cache.py  data_loader.py  profiler.py  protocols.py  synthetic_reader.py  trace_analyzer.py  trace_reader.py  util.py
profiling_example_results/: performance_report_1755975592.txt  profile_Native LRU_operations_1755975592.txt  profile_Native LRU_trace_processing_1755975592.txt  profile_Plugin LRU_operations_1755975592.txt  profile_Plugin LRU_trace_processing_1755975592.txt  profile_Slow Plugin LRU_operations_1755975592.txt  profile_Slow Plugin LRU_trace_processing_1755975592.txt  profile_results_1755975592.json  profile_summary_1755975592.csv
scripts/: install.sh  install_deps_user.sh  sync_version.py
src/: exception.cpp  export.cpp  export.h  export_admissioner.cpp  export_analyzer.cpp  export_cache.cpp  export_reader.cpp
test_output/: test_report.txt  test_results.json
tests/: test_admission.py  test_analyzer.py  test_cache.py  test_example.py  test_gil.py  test_profiler.py  test_reader.py
